--- a/src/app/single-museum/single-museum.component.html
+++ b/src/app/single-museum/single-museum.component.html
@@ -1,62 +1,18 @@
-<article class="card mb-3 shadow-sm">
+<div class="card">
   <div class="card-body">
-    <div class="card-title">
-      <h2 class="h4 mb-3">{{museumName}}</h2>
-    </div>
-
-    <div class="">
-      <!-- PHOTO -->
-    </div>
-    <!-- Localisation -->
-    <div class="row mb-2">
-      <div class="col-1">
-        📍
-      </div>
-      <div class="col-10">
-        <p class="card-text">
-          {{museumAdress}}<br>
-          {{museumZipCode}} {{museumCity | titlecase}}
-        </p>
-      </div>
-    </div>
-    <!-- Phone -->
-    <div class="row mb-2">
-      <div class="col-1">
-        📞
-      </div>
-      <div class="col-10">
-        <p class="card-text"><a href="tel:{{museumPhone}}">{{museumPhone}}</a></p>
-      </div>
-    </div>
-    <!-- Website -->
-    <div class="row mb-2">
-      <div class="col-1">
-        💻
-      </div>
-      <div class="col-10">
-        <p class="card-text">
-          <a href="https://{{museumWebSite}}" target="blank">{{museumWebSite}}</a>
-        </p>
-      </div>
-    </div>
-    <!-- Opening hours -->
-    <div class="row mb-2">
-      <div class="col-1">
-        🕒
-      </div>
-      <div class="col-10">
-        <p class="card-text">{{museumOpening}}</p>
-      </div>
-    </div>
-    <!-- View detail -->
-    <div class="row mb-2">
-      <div class="col-1">
-        ➕
-      </div>
-      <div class="col-10">
-        <p class="card-text"><a href="#">View details</a></p>
-      </div>
-    </div>
-
+    <h2 class="card-title">{{name}}</h2>
+    <p class="card-text">{{opening}}</p>
   </div>
-</article>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item">{{adress}}</li>
+    <li class="list-group-item">{{zip}}</li>
+    <li class="list-group-item">{{city}}</li>
+    <li class="list-group-item"> <a href="tel:{{phone}}">{{telephone}}</a></li>
+    <li class="list-group-item">
+      <a routerLink="museumDatails">see details</a>
+    </li>
+  </ul>
+  <div class="card-body">
+    <a href="{{website}}" class="card-link">{{website}}</a>
+  </div>
+</div>
