--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a href="#" class="nav-link">HOME</a>
+              <a routerLink="/" class="nav-link">ACCUEIL</a>
+            </li>          
+            <li class="nav-item">
+              <a routerLink="add" class="nav-link">AJOUTER UN MUSÉE</a>
             </li>
           </ul>
         </div>
