--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -4,16 +4,9 @@
       <h1>Les musées</h1>
     </div>
     <div class="row">
-      <app-single-museum class="col-4"
-      *ngFor="let museum of museums"
-      [name]="museum.name"
-      [opening]="museum.opening"
-      [zip]="museum.zip"
-      [city]="museum.city"
-      [telephone]="museum.telephone"
-      [adress]="museum.adress"
-      [website]="museum.website"
-       > </app-single-museum>
+      <app-single-museum class="col-4" *ngFor="let museum of museums" [name]="museum.name" [opening]="museum.opening"
+        [zip]="museum.zip" [city]="museum.city" [telephone]="museum.telephone" [adress]="museum.adress"
+        [website]="museum.website" [reference]="museum.reference"> </app-single-museum>
     </div>
   </div>
 </div>
