--- a/src/app/museum-detail/museum-detail.component.html
+++ b/src/app/museum-detail/museum-detail.component.html
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-body">
-    <h2 class="card-title">nom en dur</h2>
+    <h2 class="card-title">{{museumTitle}}</h2>
     <p class="card-text">test en dur</p>
   </div>
   <ul class="list-group list-group-flush">
