feat: connection to API

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,12 +1,11 @@
-<div class="container">
+<section class="container">
   <div class="row">
-    <div class="col">
-      <h1>Les musées</h1>
-    </div>
-    <div class="row">
-      <app-single-museum class="col-4" *ngFor="let museum of museums" [name]="museum.name" [opening]="museum.opening"
-        [zip]="museum.zip" [city]="museum.city" [telephone]="museum.telephone" [adress]="museum.adress"
-        [website]="museum.website" [reference]="museum.reference"> </app-single-museum>
+    <div class="col mb-3">
+      <h1>🏛️ Open Museum</h1>
     </div>
   </div>
-</div>
+  <div class="row">
+    <app-single-museum class="col-4" *ngFor="let museum of museums" [museum]="museum">
+    </app-single-museum>
+  </div>
+</section>
