--- a/src/app/add-museum/add-museum.component.html
+++ b/src/app/add-museum/add-museum.component.html
@@ -35,7 +35,7 @@
   </div>
   <div class="form-row">
     <div class="form-group col-md-8">
-      <label for="inputSiteWeb">site web</label>
+      <label for="inputSiteWeb">Site web</label>
       <input type="text" class="form-control" id="inputSiteWeb">
     </div>
   </div>
