--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,10 +8,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a routerLink="/" class="nav-link">ACCUEIL</a>
-            </li>          
+              <a routerLink="/" class="nav-link">HOME</a>
+            </li>
+            <!-- <li class="nav-item">
+              <a routerLink="singleMusuem" class="nav-link">VOIR UN MUSÉE</a>
+            </li> -->
             <li class="nav-item">
-              <a routerLink="add" class="nav-link">AJOUTER UN MUSÉE</a>
+              <a routerLink="add" class="nav-link">ADD A MUSEUM</a>
             </li>
           </ul>
         </div>
